changed yml file to run linter, tests on dev

--- a/.github/workflows/ci-cd-v2.yml
+++ b/.github/workflows/ci-cd-v2.yml
@@ -3,10 +3,10 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - feature/mlflow_test
+      - dev
   pull_request:
     branches:
-      - feature/mlflow_test
+      - dev
 
 jobs:
   lint:
